--- a/jekyll/piyush/.gitignore
+++ b/jekyll/piyush/.gitignore
@@ -3,3 +3,12 @@ _site
 .jekyll-cache
 .jekyll-metadata
 vendor
+
+ gemfiles/
+ Gemfile
+ Gemfile.lock
+ node_modules/
+ vendor/bundle/
+ vendor/cache/
+ vendor/gems/
+ vendor/ruby/
